# multi-agent-c

./: CMakeLists.txt  test.csv
src/: csv.c  csv.h  main.c
src/mas/: agent.c  agent.h  board.c  board.h  environment.h  main.c  mas.h  systems.c  systems.h  utils.h  world.c  world.h
